--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ section img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  object-fit: fill;
+  /* width: 100%; */
+  /* object-fit: fill; */
 }
 .explorer {
   padding: 15px 25px;
@@ -90,6 +90,9 @@ section img {
 }
 #moon {
   mix-blend-mode: screen;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 h2 {
   color: #fff;
@@ -100,7 +103,10 @@ h2 {
 }
 
 #mountains_front {
+  width: 100%;
+  height: 100vh;
   z-index: 9;
+  object-fit: cover;
 }
 h1 {
   color: #fff;
@@ -113,4 +119,42 @@ h1 {
   background-color: #1c0522;
   color: #fff;
   padding: 100px;
+}
+
+#mountains_behind {
+  width: 100%;
+  height: 100vh;
+  z-index: 7;
+  object-fit: cover;
+}
+
+#stars {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+@media (max-width: 600px) {
+  .list {
+    display: none;
+  }
+
+  #moontext {
+    display: none;
+  }
+  #text {
+    font-size: 30px;
+  }
+  .logo {
+    display: none;
+  }
+  #sec {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 1025px) {
+  #moontext {
+    display: none;
+  }
 }
